# Failures

./: .coverage  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  example.py  failures.py  pyproject.toml  requirements.txt  requirements_dev.txt  test_failure.py  tox.ini
.github/workflows/: release.yml  test.yml  tests.yaml  tests.yml
docs/: requirements.txt
docs/_static/: custom.css
docs/source/: api_ref.rst  conf.py  index.md  license.md  versions.md
docs/source/guide/: _dependent_series.md  _handling_manually.md  _scoped_functions.md  _scopes.md  bound_scopes.md  conclusion.md  handler.md  handling.md  handling_failures.md  reporter.md  reporting.md  scoped_functions.md  scopes.md  unbound_scopes.md
failures/: __init__.py  context.py  handler.py
src/: failures.py
src/failures/: __init__.py  _legacy.py  _print.py  core.py  functions.py  handler.py  plugins.py
tests/: BENCHMARKS.md  conftest.py  test_failure_context.py  test_failure_handler.py  test_handler.py  test_handler_object.py  test_plugins.py  test_print_failures.py  test_reporter.py  test_reporter_object.py  test_scope_object.py  test_scoped_decorator.py  test_version_compatibility.py
