[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "failures"
dynamic = ["version"]
description = "Tool for handling nested calls errors and pipointing their source"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.6"
authors = [
    {name = "MARSO Adnan", email = "mediadnan@gmail.com"},
]
maintainers = [
    {name = "MARSO Adnan", email = "mediadnan@gmail.com"},
]
keywords = [
    "failures",
    "handle",
    "handling",
    "report",
    "track",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
documentation = "https://failures.readthedocs.org"
repository = "https://github.com/mediadnan/failures"

[tool.setuptools.dynamic]
version = {attr = "failures.__version__"}

[project.optional-dependencies]
colors = ["colorama==0.4.*"]

[tool.setuptools]
packages = ["failures"]
package-data = { failures = ["py.typed"] }

[tool.black]
line-length = 120
target-version = [
    'py36',
    'py37',
    'py38',
    'py39',
    'py310',
    'py311'
]
