[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "failures"
dynamic = ["version", "dependencies"]
description = "Successfully dealing with failures"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
authors = [ {name = "MARSO Adnan", email = "mediadnan@gmail.com"} ]
maintainers = [ {name = "MARSO Adnan", email = "mediadnan@gmail.com"} ]
keywords = [ "label", "failures", "handle", "handling", "report", "track" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
documentation = "https://failures.readthedocs.org"
repository = "https://github.com/mediadnan/failures"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["failures"]

[tool.setuptools.dynamic]
version = {attr = "failures.__version__"}
dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
colors = ["colorama>=0.4,<1.0", "types-colorama"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = ['ignore:.*will be removed in failures \d.0.*:DeprecationWarning',]
addopts = "--cov=failures --cov-report=html --cov-branch"
testpaths = "tests/"

[tool.mypy]
implicit_optional = true